<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:src="@drawable/iv_login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_welcome"
        android:typeface="sans"
        android:textColor="#333333"
        android:textSize="31sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_login_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/et_login_user_name"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:hint="@string/et_login_user_name"
        android:textSize="12sp"
        android:textColorHint="#999999"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="247dp"
        android:layout_height="40dp"
        android:hint="@string/et_login_password"
        android:textColorHint="#999999"
        android:textSize="12sp"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toTopOf="@id/et_login_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_login_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/tv_login_code_login"
        android:textColor="#81d8cf"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/tv_login_forget_password"
        android:textColor="#81d8cf"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_code_login"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintTop_toTopOf="@+id/tv_login_code_login" />

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:text="@string/tv_login_login"
        android:textColor="#ffffff"
        android:textSize="19sp"
        android:gravity="center"
        android:background="@drawable/bt_login_bg"
        android:layout_marginTop="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_login_create_user"
        android:textColor="#81d8cf"
        android:textSize="12sp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="@+id/bt_login_login"
        app:layout_constraintStart_toStartOf="@+id/bt_login_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_login" />



</androidx.constraintlayout.widget.ConstraintLayout>