<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_personal_user_icon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="67dp"
        android:contentDescription="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_personal_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_xx"
        android:textColor="#393939"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="@id/iv_personal_user_icon"
        app:layout_constraintRight_toRightOf="@id/iv_personal_user_icon"
        app:layout_constraintTop_toBottomOf="@id/iv_personal_user_icon" />

    <TextView
        android:id="@+id/tv_personal_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/tv_xx"
        android:textColor="#7c7c7c"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_personal_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_user_name" />

    <TextView
        android:id="@+id/tv_personal_user_collection_model_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_xx"
        android:textColor="#81d8cf"
        android:textSize="23sp"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintEnd_toStartOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_personal_user_my_wear_number" />

    <TextView
        android:id="@+id/tv_personal_user_collection_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_xx"
        android:textColor="#454545"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_personal_user_collection_model_number"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_collection_model_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_user_collection_model_number" />

    <TextView
        android:id="@+id/tv_personal_user_my_wear_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_xx"
        android:textColor="#81d8cf"
        android:textSize="23sp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_personal_user_collection_wear_number"
        app:layout_constraintStart_toEndOf="@+id/tv_personal_user_collection_model_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_user_email" />

    <TextView
        android:id="@+id/tv_personal_user_my_wear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_user_my_wear"
        android:textColor="#454545"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_user_my_wear_number" />

    <TextView
        android:id="@+id/tv_personal_user_collection_wear_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_xx"
        android:textColor="#81d8cf"
        android:textSize="23sp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_personal_user_my_wear_number"
        app:layout_constraintTop_toTopOf="@+id/tv_personal_user_my_wear_number" />

    <TextView
        android:id="@+id/tv_personal_user_collection_wear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_xx"
        android:textColor="#454545"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_personal_user_collection_wear_number"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_collection_wear_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_personal_user_collection_wear_number" />


    <View
        android:id="@+id/view_personal_user_my_model_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_user_collection_model" />

    <ImageView
        android:id="@+id/iv_personal_user_my_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/personal_my_model"
        app:layout_constraintBottom_toBottomOf="@id/view_personal_user_my_model_bg"
        app:layout_constraintEnd_toEndOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintLeft_toLeftOf="@id/view_personal_user_my_model_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintTop_toTopOf="@id/view_personal_user_my_model_bg" />

    <TextView
        android:id="@+id/tv_personal_user_my_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_user_my_model"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_personal_user_my_model"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_wear_model"
        app:layout_constraintTop_toTopOf="@+id/iv_personal_user_my_model" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        app:layout_constraintBottom_toBottomOf="@+id/view_personal_user_my_model_bg"
        tools:layout_editor_absoluteX="22dp" />

    <View
        android:id="@+id/view_personal_user_wear_model_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/view_personal_user_my_model_bg" />

    <ImageView
        android:id="@+id/iv_personal_user_wear_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:src="@drawable/personal_wear_model"
        app:layout_constraintLeft_toLeftOf="@id/view_personal_user_wear_model_bg"
        app:layout_constraintTop_toTopOf="@id/view_personal_user_wear_model_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_personal_user_wear_model_bg"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/tv_personal_user_wear_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/tv_personal_user_wear_model"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintStart_toEndOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintTop_toTopOf="@+id/iv_personal_user_wear_model" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_personal_user_wear_model_bg" />


    <View
        android:id="@+id/view_personal_user_my_wear_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/view_personal_user_wear_model_bg" />

    <ImageView
        android:id="@+id/iv_personal_user_my_wear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/personal_my_wear"
        app:layout_constraintBottom_toBottomOf="@id/view_personal_user_my_wear_bg"
        app:layout_constraintEnd_toEndOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintLeft_toLeftOf="@id/view_personal_user_my_wear_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_personal_user_wear_model"
        app:layout_constraintTop_toTopOf="@id/view_personal_user_my_wear_bg" />

    <TextView
        android:id="@+id/tv_personal_user_my_wearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_user_my_wear"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_personal_user_my_wear"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_wear_model"
        app:layout_constraintTop_toTopOf="@+id/iv_personal_user_my_wear" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_personal_user_my_wear_bg" />

    <View
        android:id="@+id/view_personal_user_my_collection_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/view_personal_user_my_wear_bg" />

    <ImageView
        android:id="@+id/iv_personal_user_my_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:src="@drawable/personal_my_collection"
        app:layout_constraintLeft_toLeftOf="@id/view_personal_user_my_collection_bg"
        app:layout_constraintTop_toTopOf="@id/view_personal_user_my_collection_bg"
        app:layout_constraintBottom_toBottomOf="@id/view_personal_user_my_collection_bg"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/tv_personal_user_my_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:text="@string/tv_personal_user_my_collection"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_personal_user_my_collection"
        app:layout_constraintStart_toEndOf="@+id/iv_personal_user_my_collection"
        app:layout_constraintTop_toTopOf="@+id/iv_personal_user_my_collection" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_personal_user_my_collection_bg" />

    <View
        android:id="@+id/view_personal_user_vip_subscription_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/view_personal_user_my_collection_bg" />

    <ImageView
        android:id="@+id/iv_personal_user_vip_subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/personal_vip_subscription"
        app:layout_constraintBottom_toBottomOf="@id/view_personal_user_vip_subscription_bg"
        app:layout_constraintEnd_toEndOf="@+id/iv_personal_user_my_wear"
        app:layout_constraintLeft_toLeftOf="@id/view_personal_user_vip_subscription_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_personal_user_my_wear"
        app:layout_constraintTop_toTopOf="@id/view_personal_user_vip_subscription_bg" />

    <TextView
        android:id="@+id/tv_personal_user_vip_subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_personal_vip_subscription"
        android:textColor="#454545"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_personal_user_vip_subscription"
        app:layout_constraintStart_toStartOf="@+id/tv_personal_user_my_wearing"
        app:layout_constraintTop_toTopOf="@+id/iv_personal_user_vip_subscription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_personal_user_vip_subscription_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>